--- a/MvcProjeKampi/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProjeKampi/Views/Shared/_AdminLayout.cshtml
@@ -87,7 +87,7 @@ to get the desired effect
                                 </p>
                             </a>                            
                         </li>
-                        <li class="nav-item has-treeview">
+                        @*<li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
@@ -123,16 +123,16 @@ to get the desired effect
                                     Hakkımızda
                                 </p>
                             </a>                            
-                        </li>
+                        </li>*@
                         <li class="nav-item has-treeview">
                             <a href="/Contact/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-edit"></i>
                                 <p>
-                                    İletişim & Mesajlar
+                                    Mesajlar
                                 </p>
                             </a>                            
                         </li>
-                        <li class="nav-item has-treeview">
+                        @*<li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-table"></i>
                                 <p>
@@ -164,7 +164,7 @@ to get the desired effect
                                     
                                 </p>
                             </a>                            
-                        </li>
+                        </li>*@
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-book"></i>
