başlığa göre yazarların listelenmesi

--- a/MvcProjeKampi/Views/Default/Headings.cshtml
+++ b/MvcProjeKampi/Views/Default/Headings.cshtml
@@ -83,8 +83,7 @@ to get the desired effect
 
             <!-- Main content -->
             <div class="content">
-                @*@RenderBody()*@
-                <!-- /.container-fluid -->
+               @Html.Action("Index","Default")
             </div>
             <!-- /.content -->
         </div>
