--- a/MvcProjeKampi/Views/Content/ContentByHeading.cshtml
+++ b/MvcProjeKampi/Views/Content/ContentByHeading.cshtml
@@ -32,7 +32,7 @@
                                     <i class="fas fa-comment bg-yellow"></i>
                                     <div class="timeline-item">
                                         <h3 class="timeline-header"><a href="#">@item.Writer.WriterName
-                                             @item.Writer.WriterSurName</a> Deneme</h3>
+                                             @item.Writer.WriterSurName</a>  - @item.Heading.HeadingName</h3>
                                         <div class="timeline-body">
                                             @item.ContentValue
                                         </div>
